removed puretls from build for now

--- a/pom.xml
+++ b/pom.xml
@@ -356,6 +356,6 @@
 		<module>cagrid-cds</module>
 		<module>cagrid-gts</module>
 		<module>cagrid-gridgrouper</module>
-		<module>puretls</module>
+		<!-- TODO: MOVE THIS <module>puretls</module>-->
 	</modules>
 </project>
