--- a/cagrid-cds/cagrid-cds-service/pom.xml
+++ b/cagrid-cds/cagrid-cds-service/pom.xml
@@ -110,7 +110,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
-			<artifactId>jce-jdk13</artifactId>
+			<artifactId>bcprov-jdk14</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.santuario</groupId>
