--- a/cagrid-dorian/cagrid-dorian-service-tools/pom.xml
+++ b/cagrid-dorian/cagrid-dorian-service-tools/pom.xml
@@ -44,7 +44,7 @@
 
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
-			<artifactId>jce-jdk13</artifactId>
+			<artifactId>bcprov-jdk14</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.santuario</groupId>
