--- a/cagrid-dorian/cagrid-dorian-service/pom.xml
+++ b/cagrid-dorian/cagrid-dorian-service/pom.xml
@@ -115,7 +115,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
-			<artifactId>jce-jdk13</artifactId>
+			<artifactId>bcprov-jdk14</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.santuario</groupId>
