--- a/cagrid-gridgrouper/cagrid-gridgrouper-service/pom.xml
+++ b/cagrid-gridgrouper/cagrid-gridgrouper-service/pom.xml
@@ -116,7 +116,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
-			<artifactId>jce-jdk13</artifactId>
+			<artifactId>bcprov-jdk14</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.santuario</groupId>
