--- a/cagrid-third-party-features/pom.xml
+++ b/cagrid-third-party-features/pom.xml
@@ -63,7 +63,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
-			<artifactId>jce-jdk13</artifactId>
+			<artifactId>bcprov-jdk14</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.servicemix.bundles</groupId>
