--- a/cagrid-gridgrouper/cagrid-gridgrouper-service/pom.xml
+++ b/cagrid-gridgrouper/cagrid-gridgrouper-service/pom.xml
@@ -72,6 +72,7 @@
                             org.cagrid.gridgrouper.service.impl.tools
 						</Private-Package>
 						<Import-Package>
+                            !org.apache.commons.cli,
                             edu.internet2.middleware*,
                             *
                         </Import-Package>
