got all legacy tests working now

--- a/cagrid-gts/cagrid-gts-service/src/test/resources/META-INF/spring/gts.properties
+++ b/cagrid-gts/cagrid-gts-service/src/test/resources/META-INF/spring/gts.properties
@@ -1,4 +1,5 @@
 cagrid.gts.service.config.url=src/test/resources/gts-conf.xml
 cagrid.gts.service.metadata.url=serviceMetadata.xml
 cagrid.gts.service.security.metadata.url=serviceSecurityMetadata.xml
-cagrid.gts.service.url=https://localhost:8443/wsrf/services/cagrid/GTS
+cagrid.gts.service.url=localhost
+cagrid.gts.sync.authorities=false
