--- a/cagrid-core/pom.xml
+++ b/cagrid-core/pom.xml
@@ -26,6 +26,7 @@
 							gov.nih.nci.cagrid.metadata.exceptions,
 							org.cagrid.core.cache,
 							org.cagrid.core.common,
+                            org.cagrid.core.common.security,
 							org.cagrid.core.metadata,
 							org.cagrid.core.resource,
 							org.cagrid.core.soapclient,
@@ -39,6 +40,7 @@
 							gov.nih.nci.cagrid.metadata.exceptions,
 							org.cagrid.core.cache,
 							org.cagrid.core.common,
+                            org.cagrid.core.common.security,
 							org.cagrid.core.metadata,
 							org.cagrid.core.resource,
 							org.cagrid.core.soapclient,
