--- a/cagrid-cds/cagrid-cds-service/pom.xml
+++ b/cagrid-cds/cagrid-cds-service/pom.xml
@@ -66,9 +66,16 @@
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Export-Package></Export-Package>
 						<Private-Package>
-							org.cagrid.cds.service.impl
+							org.cagrid.cds.service.impl,
+                            org.cagrid.cds.service.impl.delegatedcredential,
+                            org.cagrid.cds.service.impl.manager,
+                            org.cagrid.cds.service.impl.policy,
+                            org.cagrid.cds.service.impl.util
 						</Private-Package>
-						<Import-Package>*</Import-Package>
+						<Import-Package>
+                            org.apache.cxf.jaxws.spi,
+                            *
+                        </Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
@@ -87,6 +94,10 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>cagrid-gridgrouper-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-gridgrouper-soap-client</artifactId>
         </dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
@@ -157,5 +168,10 @@
 			<groupId>com.mysql.jdbc</groupId>
 			<artifactId>com.springsource.com.mysql.jdbc</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 </project>
