Configure proxy cert trust manager via jetty ssl context factory.

--- a/cagrid-features/pom.xml
+++ b/cagrid-features/pom.xml
@@ -63,6 +63,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-proxy-trust</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-metadata-model</artifactId>
 		</dependency>
 		<dependency>
