--- a/cagrid-dorian/cagrid-dorian-wsrf/pom.xml
+++ b/cagrid-dorian/cagrid-dorian-wsrf/pom.xml
@@ -23,6 +23,7 @@
 						<Private-Package>org.cagrid.dorian.service.wsrf</Private-Package>
 						<Import-Package>
 							schema.org.cagrid.dorian,
+							org.cagrid.security.ssl.proxy.trust,
 							META-INF.cxf,
 							META-INF.cxf.osgi,
 							org.apache.cxf.bus.spring,
@@ -43,6 +44,10 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-proxy-trust</artifactId>
 		</dependency>
 	</dependencies>
 </project>
