Add icky jaxb toString, etc. to gaards-api.

--- a/cagrid-gaards/cagrid-gaards-api/pom.xml
+++ b/cagrid-gaards/cagrid-gaards-api/pom.xml
@@ -12,6 +12,7 @@
 
 	<properties>
 		<wsdl.path>schema/org/cagrid/gaards/AuthenticationService.wsdl</wsdl.path>
+		<jaxb2.basics.version>0.6.4</jaxb2.basics.version>
 	</properties>
 
 	<profiles>
@@ -22,6 +23,14 @@
 					<plugin>
 						<groupId>org.apache.cxf</groupId>
 						<artifactId>cxf-codegen-plugin</artifactId>
+						<!-- Don't copy *Fault.java generated with -xjc-XtoString, etc. -->
+						<dependencies>
+							<dependency>
+								<groupId>org.jvnet.jaxb2_commons</groupId>
+								<artifactId>jaxb2-basics</artifactId>
+								<version>${jaxb2.basics.version}</version>
+							</dependency>
+						</dependencies>
 						<executions>
 							<execution>
 								<id>generate-sources</id>
@@ -68,6 +77,9 @@
 												<extraarg>http://docs.oasis-open.org/wsrf/2004/06/wsrf-WS-ResourceProperties-1.2-draft-01.xsd</extraarg>
 												<extraarg>-nexclude</extraarg>
 												<extraarg>http://docs.oasis-open.org/wsrf/2004/06/wsrf-WS-ResourceProperties-1.2-draft-01.wsdl</extraarg>
+												<extraarg>-xjc-XtoString</extraarg>
+												<extraarg>-xjc-XhashCode</extraarg>
+												<extraarg>-xjc-Xequals</extraarg>
 											</extraargs>
 											<bindingFiles>
 												<bindingFile>work/schema/jaxb-binding.xjb</bindingFile>
@@ -264,6 +276,11 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jvnet.jaxb2_commons</groupId>
+			<artifactId>jaxb2-basics-runtime</artifactId>
+			<version>${jaxb2.basics.version}</version>
 		</dependency>
 	</dependencies>
 </project>
