--- a/cagrid-gts/pom.xml
+++ b/cagrid-gts/pom.xml
@@ -47,8 +47,9 @@
 	<modules>
 		<module>cagrid-gts-api</module>
 		<module>cagrid-gts-service</module>
-		<!-- <module>cagrid-gts-wsrf</module> -->
+		<module>cagrid-gts-wsrf</module>
 		<module>cagrid-gts-soap-client</module>
 		<module>cagrid-gts-features</module>
+		<module>cagrid-gts-tests</module>
 	</modules>
 </project>
