--- a/cagrid-gridgrouper/cagrid-gridgrouper-service/pom.xml
+++ b/cagrid-gridgrouper/cagrid-gridgrouper-service/pom.xml
@@ -11,7 +11,7 @@
 	<name>caGrid GridGrouper Service</name>
 
 	<properties>
-		<db.name>GRIDGROUPER_TEST</db.name>
+		<db.name>grouper</db.name>
 	</properties>
 
 	<build>
@@ -83,6 +83,20 @@
 	</build>
 
 	<dependencies>
+        <!--
+        <dependency>
+            <groupId>net.sf.hibernate</groupId>
+            <artifactId>hibernate</artifactId>
+            <version>2.1.8</version>
+            <scope>test</scope>
+        </dependency>
+        -->
+        <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant</artifactId>
+            <version>1.7.0</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-gridgrouper-api</artifactId>
