--- a/cagrid-cds/cagrid-cds-service/pom.xml
+++ b/cagrid-cds/cagrid-cds-service/pom.xml
@@ -83,6 +83,10 @@
 	</build>
 
 	<dependencies>
+        <dependency>
+            <groupId>${wsrf.group}</groupId>
+            <artifactId>wsrf-jglobus</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-cds-api</artifactId>
