--- a/cagrid-third-party-features/pom.xml
+++ b/cagrid-third-party-features/pom.xml
@@ -88,5 +88,9 @@
 			<artifactId>com.springsource.com.mysql.jdbc</artifactId>
 			<version>5.1.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jvnet.jaxb2_commons</groupId>
+			<artifactId>jaxb2-basics-runtime</artifactId>
+		</dependency>
 	</dependencies>
 </project>
