--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
 		<spring.version>3.0.5.RELEASE</spring.version>
 		<slf4j.version>1.6.6</slf4j.version>
 		<junit.version>4.10</junit.version>
+		<karaf.version>2.2.10</karaf.version>
+		<smx.version>4.5.1</smx.version>
+		<pax-exam.version>2.6.0</pax-exam.version>
+		<karaf-exam.version>2.3.1</karaf-exam.version>
 	</properties>
 	<build>
 		<pluginManagement>
