add classify to dep

--- a/cagrid-gts/cagrid-gts-tests/pom.xml
+++ b/cagrid-gts/cagrid-gts-tests/pom.xml
@@ -37,6 +37,8 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-gts-features</artifactId>
 			<version>${project.version}</version>
+			<classifier>features</classifier>
+			<type>xml</type>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
