--- a/cagrid-gts/cagrid-gts-tests/pom.xml
+++ b/cagrid-gts/cagrid-gts-tests/pom.xml
@@ -41,6 +41,30 @@
 			<type>xml</type>
 		</dependency>
 		<dependency>
+			<groupId>org.cagrid</groupId>
+			<artifactId>cagrid-third-party-features</artifactId>
+			<classifier>features</classifier>
+			<type>xml</type>
+		</dependency>
+		<dependency>
+			<groupId>org.cagrid.wsrf</groupId>
+			<artifactId>wsrf-draft-features</artifactId>
+			<classifier>features</classifier>
+			<type>xml</type>
+		</dependency>
+		<dependency>
+			<groupId>org.cagrid</groupId>
+			<artifactId>cagrid-features</artifactId>
+			<classifier>features</classifier>
+			<type>xml</type>
+		</dependency>
+		<dependency>
+			<groupId>org.cagrid</groupId>
+			<artifactId>cagrid-gaards-features</artifactId>
+			<classifier>features</classifier>
+			<type>xml</type>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
