moved gaards feature to cagrid features

--- a/cagrid-features/pom.xml
+++ b/cagrid-features/pom.xml
@@ -77,7 +77,10 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-core</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-gaards-api</artifactId>
+		</dependency>
 		
 		
 		
