gme service and unit tests

--- a/cagrid-gme/cagrid-gme-service/src/test/resources/META-INF/spring/gme.properties
+++ b/cagrid-gme/cagrid-gme-service/src/test/resources/META-INF/spring/gme.properties
@@ -1,5 +1,8 @@
-cagrid.gme.db.dialect=org.hibernate.dialect.MySQLInnoDBDialect
-cagrid.gme.db.driver=com.mysql.jdbc.Driver
-cagrid.gme.db.url=jdbc:mysql://localhost:3306/gme
-cagrid.gme.db.username=root
-cagrid.gme.db.password=
+cagrid.gme.service.db.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+cagrid.gme.service.db.driver=com.mysql.jdbc.Driver
+cagrid.gme.service.db.url=jdbc:mysql://localhost:3306/gme
+cagrid.gme.service.db.username=root
+cagrid.gme.service.db.password=
+cagrid.gme.service.security.metadata.url=serviceSecurityMetadata.xml
+cagrid.gme.service.metadata.url=serviceMetadata.xml
+cagrid.gme.service.db.hibernate.hbm2ddl.auto=create-drop
