--- a/cagrid-gme/cagrid-gme-service/pom.xml
+++ b/cagrid-gme/cagrid-gme-service/pom.xml
@@ -11,7 +11,7 @@
 	<name>caGrid GME Service</name>
 
 	<properties>
-		<db.name>GME_TEST</db.name>
+		<db.name>gme</db.name>
 	</properties>
 
 	<build>
@@ -79,6 +79,18 @@
 	</build>
 
 	<dependencies>
+        <dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>com.springsource.javax.transaction</artifactId>
+            <version>1.1.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>jdepend</groupId>
+            <artifactId>jdepend</artifactId>
+            <version>2.9.1</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.apache.xerces</groupId>
             <artifactId>com.springsource.org.apache.xerces</artifactId>
