--- a/pom.xml
+++ b/pom.xml
@@ -301,12 +301,24 @@
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>com.springsource.org.hibernate</artifactId>
-                <version>3.3.2.GA</version>
+                <version>3.3.1.GA</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>com.springsource.slf4j.api</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>com.springsource.org.hibernate.annotations</artifactId>
                 <version>3.4.0.GA</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>com.springsource.slf4j.api</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
